--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   <hgroup class="auto-fadein">
     <h1>Data Science Capstone: NLP App Pitch</h1>
-    <h2>January 4rd, 2020</h2>
+    <h2>January 4th, 2020</h2>
     <p>xubRAw (GH)<br/></p>
   </hgroup>
   
