--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/phone.css" 
     media="only screen and (max-device-width: 480px)" >
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/slidify.css" >
-  <link rel="stylesheet" href="libraries/highlighters/prettify/css/tomorrow.css" />
-  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="libraries/widgets/bootstrap/css/bootstrap.css"></link>
-<link rel=stylesheet href="./assets/css/ribbons.css"></link>
+  <link rel="stylesheet" href="libraries/highlighters/prettify/css/.css" />
+  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="./assets/css/ribbons.css"></link>
 
   
   <!-- Grab CDN jQuery, fall back to local if offline -->
@@ -63,7 +62,8 @@ that was build during the course, accessible by deploying a <a href="https://www
 <li>the nlp algorithm used is an <a href="https://en.wikipedia.org/wiki/N-gram">n-gram</a> probabilistic model</li>
 <li>this algorithm is not to complex and very versatile and can be deployed on systems with limited computational resources</li>
 <li>an exploratory analysis was conducted in week 2 to explore the data set and its features</li>
-<li>various possibilities for the improvement of speed and accuracy  of the model were explored and balanced to create a responsive experience in the app</li>
+<li>various possibilities for the improvement of speed and accuracy  of the model were explored and balanced to create a responsive experience in the app
+<hr></li>
 </ul>
 
   </article>
@@ -85,7 +85,8 @@ that was build during the course, accessible by deploying a <a href="https://www
 <li>the model iterates from longest n-gram (4-gram) to shortest (2-gram)</li>
 <li>by doing so the algorithm provides the best prediction under the constraints of the conditions given</li>
 <li>for this project I had mainly computational constraints which made it important that the algorithm is responsive rather than extremely accurate</li>
-<li>in the current state the model is only trained with an English corpus, but in the future I want to expand the model / app to include more languages</li>
+<li>in the current state the model is only trained with an English corpus, but in the future I want to expand the model / app to include more languages
+<hr></li>
 </ul>
 
   </article>
@@ -101,11 +102,15 @@ that was build during the course, accessible by deploying a <a href="https://www
   
   <article data-timings="">
     <ul>
-<li><p>provides a text input field for a user to type a word / phrase</p></li>
-<li><p>the app detects the words and predicts the next word reactively</p></li>
-<li><p>inconclusive warning if the algorithm fails to make a proper prediction</p></li>
-<li><p>prediction uses the the longest, most frequent, matching n-gram</p></li>
-<li><p>the app has a documentation tap with informative links regarding the topic</p></li>
+<li>provides a text input field for a user to type a word / phrase</li>
+<li>the app detects the words and predicts the next word reactively</li>
+<li>inconclusive warning if the algorithm fails to make a proper prediction</li>
+<li>prediction uses the the longest, most frequent, matching n-gram</li>
+<li>the app has a documentation tap with informative links regarding the topic</li>
+<li>response time ~1 second</li>
+<li>memory usage ca. 30 mb</li>
+<li>link to app: <a href="https://xburaw.shinyapps.io/c10shinyapp/">xburaw.shinyapps.io/c10shinyapp/</a>
+<hr></li>
 </ul>
 
   </article>
@@ -122,12 +127,6 @@ that was build during the course, accessible by deploying a <a href="https://www
 </figure> 
 
 <hr>
-
-<ul>
-<li>link to the app: <a href="https://xburaw.shinyapps.io/c10shinyapp/">xburaw.shinyapps.io/c10shinyapp/</a></li>
-<li>response time ~1 second</li>
-<li>memory usage ca. 30 mb</li>
-</ul>
 
   </article>
   <!-- Presenter Notes -->
@@ -176,31 +175,7 @@ that was build during the course, accessible by deploying a <a href="https://www
   <![endif]-->
 </body>
   <!-- Load Javascripts for Widgets -->
-  <script src="libraries/widgets/bootstrap/js/bootstrap.min.js"></script>
-<script src="libraries/widgets/bootstrap/js/bootbox.min.js"></script>
-
-  <!-- MathJax: Fall back to local if CDN offline but local image fonts are not supported (saves >100MB) -->
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        processEscapes: true
-      }
-    });
-  </script>
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-  <!-- <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script> -->
   
-<script>window.MathJax || document.write('<script type="text/x-mathjax-config">MathJax.Hub.Config({"HTML-CSS":{imageFont:null}});<\/script><script src="libraries/widgets/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>')
-</script>
-
-  <script>  
-  $(function (){ 
-    $("#example").popover(); 
-    $("[rel='tooltip']").tooltip(); 
-  });  
-  </script>  
   <!-- Google Prettify -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js"></script>
   <script src='libraries/highlighters/prettify/js/lang-r.js'></script>
